# WebvideoASR

./: .gitignore  README.md  main.py  pyproject.toml
asr_core/: __init__.py  audio.py  chunking.py  config.py  engine.py  formatting.py
asr_core/backends/: __init__.py  mlx_backend.py  torch_backend.py
audio/: Granola烤燕麦：1个公式3种口味，微波-烤箱-平底锅都能做!.m4a  test_audio.m4a
local/: __init__.py  cli.py  config.yaml  pipeline.py
webvideo/: __init__.py  app.py  artifacts.py  auth.py  cli.py  config.py  downloader.py  models.py  pipeline.py  renderer.py  repository.py  resolver.py  workers.py  ytdlp_runtime.py
webvideo/browser_backends/: __init__.py  chrome_cookies.py  scrapling.py
webvideo/extractors/: __init__.py  browser.py  manifests.py  ytdlp.py
webvideo/integrations/: __init__.py  base.py  bilibili.py  douyin.py  douyin_browser.py  kuaishou.py  registry.py  xiaohongshu.py  youtube.py
webvideo/similarity/: __init__.py  base.py  jaccard.py  matcher.py
webvideo/static/: app.js  styles.css
webvideo/templates/: index.html
