[project]
name = "videoASR"
version = "0.1.0"
description = "Local and web-based video ASR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "ffmpeg>=1.4",
    "httpx>=0.28.1",
    "playwright>=1.50",
    "pyyaml>=6.0.3",
    "qrcode>=8.2",
    "scrapling[fetchers]==0.4.9",
    "uvicorn>=0.34",
    "yt-dlp[curl-cffi]>=2026.5.22",
    "modelscope>=1.37.1"
]

[project.optional-dependencies]
mac-gpu = [
    "mlx-qwen3-asr>=0.3.5 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
win-gpu = [
    "qwen-asr>=0.0.6",
    "torch",
    "torchaudio",
]
cpu = [
    "qwen-asr>=0.0.6",
    "torch",
    "torchaudio",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "extra == 'win-gpu'" },
    { index = "pytorch-cpu", marker = "extra == 'cpu' and extra != 'win-gpu'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "extra == 'win-gpu'" },
    { index = "pytorch-cpu", marker = "extra == 'cpu' and extra != 'win-gpu'" },
]
